@@ -1,13 +1,15 @@
 package com.assignment.blogapi.spring;
 
 import com.assignment.blogapi.repository.BlogUserRepository;
+import com.assignment.blogapi.security.ExceptionHandlerFilter;
 import com.assignment.blogapi.security.JwtAuthenticationEntryPoint;
 import com.assignment.blogapi.security.JwtRequestFilter;
 import com.assignment.blogapi.security.JwtUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.PropertySource;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -18,6 +20,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
@@ -29,7 +32,6 @@ import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
 @EnableWebSecurity
-@PropertySource("classpath:application.properties")
 public class SpringConfiguration {
 
     private final JwtUtil jwtUtil;
@@ -50,12 +52,28 @@ public class SpringConfiguration {
         return new BCryptPasswordEncoder();
     }
 
+    private static final Long MAX_AGE = 1000 * 60 * 60 * 24L;
+
     @Bean
     UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "content-type"));
+        configuration.setAllowedMethods(
+                Arrays.asList(
+                        HttpMethod.GET.name(),
+                        HttpMethod.POST.name(),
+                        HttpMethod.PUT.name(),
+                        HttpMethod.DELETE.name(),
+                        HttpMethod.OPTIONS.name()));
+        configuration.setAllowedHeaders(
+                List.of(
+                        HttpHeaders.AUTHORIZATION,
+                        HttpHeaders.CONTENT_TYPE,
+                        HttpHeaders.ACCEPT,
+                        HttpHeaders.SET_COOKIE,
+                        HttpHeaders.COOKIE));
+        configuration.setMaxAge(MAX_AGE);
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -66,7 +84,7 @@ public class SpringConfiguration {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
-    @Bean
+
     public JwtRequestFilter jwtRequestFilter() {
         return new JwtRequestFilter(jwtUtil, blogUserRepository);
     }
@@ -75,6 +93,11 @@ public class SpringConfiguration {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .exceptionHandling((exception) -> exception.authenticationEntryPoint(jwtAuthenticationEntryPoint))
+                .addFilterBefore(
+                        jwtRequestFilter(),
+                        UsernamePasswordAuthenticationFilter.class
+                )
+                .addFilterBefore(new ExceptionHandlerFilter(), JwtRequestFilter.class)
                 .authorizeHttpRequests((authz) -> authz
                         .requestMatchers(toH2Console()).permitAll()
                         .requestMatchers("/api/auth/register", "/api/auth/login", "/api/auth/username-check").permitAll()
@@ -86,11 +109,7 @@ public class SpringConfiguration {
                         .ignoringRequestMatchers(toH2Console())
                         .disable())
                 .headers(headers -> headers.frameOptions(HeadersConfigurer.FrameOptionsConfig::disable))
-                .httpBasic(withDefaults())
-                .addFilterBefore(
-                        jwtRequestFilter(),
-                        UsernamePasswordAuthenticationFilter.class
-                );
+                .httpBasic(withDefaults());
         return http.build();
     }
 
